[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lxm3"
description = 'LXM3: XManager launch backend for HPC clusters'
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = "MIT"
keywords = []
authors = [{ name = "Yicheng Luo", email = "ethanluoyc@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

dependencies = [
  "absl-py",
  "attrs",
  "ml_collections",
  "tomlkit",
  "paramiko",
  "fabric",
  "appdirs",
  "fsspec",
  "async_generator",
  "immutabledict",
  "rich",
  "vcsinfo",
]

[project.scripts]
lxm3 = "lxm3.cli.cli:entrypoint"

[project.optional-dependencies]
shell = [
  "IPython"
]


[tool.hatch.envs.default]
features = [
  "shell"
]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "fabric",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
  "tests",
  "*_test.py",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:lxm3 tests}"
test-cov = "pytest --cov=lxm3 --cov-report=xml tests"
cov = [
  "test-cov",
  "coverage report"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | docs
  | .github
  | third_party
  | _vendor
  | scratch
)/
'''

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",
]
exclude = ["_vendor", "xm"]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["lxm3"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.paths]
source = ["lxm3", "*/lxm3/lxm3"]

[tool.coverage.run]
omit = [
  "lxm3/_vendor/*",
  "tests/*",
  "conftest.py",
  "lxm3/xm_cluster/execution/utils.py" # not used
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["lxm3"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "lxm3/xm",
  "lxm3/_vendor",
]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"
